--- a/stack.yaml
+++ b/stack.yaml
@@ -1,4 +1,4 @@
-resolver: lts-17.1
+resolver: lts-17.2
 packages: 
   - .
 extra-deps:
@@ -14,3 +14,4 @@ extra-deps:
   - hslua-module-text-0.2.1
   - skylighting-0.8.5
   - skylighting-core-0.8.5
+system-ghc: true
