--- a/catbus.cabal
+++ b/catbus.cabal
@@ -8,5 +8,9 @@ executable site
   build-depends:    base == 4.*
                   , hakyll == 4.13.*
                   , pandoc == 2.10.*
+                  , pandoc-types
+                  , bytestring
+                  , uri-encode
+                  , text
   ghc-options:      -threaded
   default-language: Haskell2010
